Update Linear Regression notebook with new exercise

--- a/Linear_Regression/linear_regression.ipynb
+++ b/Linear_Regression/linear_regression.ipynb
@@ -24,17 +24,14 @@
     "\n",
     "The model equation is:\n",
     "\n",
-    "\\[\n",
-    "f_{w,b}(x^{(i)}) = wx^{(i)} + b\n",
-    "\\]\n",
-    "\n",
+    "f_{w,b}(x^(i)) = wx^(i) + b\n",
     "Where:\n",
     "\n",
-    "- \\( x \\) is the input feature (age),\n",
-    "- \\( y \\) is the output (systolic blood pressure).\n",
+    "- x is the input feature (age),\n",
+    "- y is the output (systolic blood pressure).\n",
     "\n",
     "Calculate:\n",
-    "- \\( w \\) (slope) and \\( b \\) (intercept) using the given data.\n",
+    "- w (slope) and b (intercept) using the given data.\n",
     "- Use the calculated model to predict the blood pressure for the new input (age = 40).\n"
    ]
   },
